--- a/pages/router/index.wxml
+++ b/pages/router/index.wxml
@@ -12,21 +12,42 @@
       </view>
     </view>
   </view>
+
+  <!-- 学习进度条 -->
+  <view class="progress-section">
+    <view class="progress-container">
+      <view class="progress-bar-wrapper">
+        <view class="progress-bar">
+          <view class="progress-fill" style="width: {{progressPercent}}%;">
+            <view class="progress-indicator" style="left: 100%;">
+              <view class="indicator-outer-ring">
+                <view class="indicator-inner-circle"></view>
+              </view>
+            </view>
+          </view>
+        </view>
+        <view class="progress-text">{{progressPercent}}%</view>
+      </view>
+    </view>
+  </view>
+
   <view wx:key="id" wx:for="{{allCourses}}" class="page-line" style="margin-left:20rpx;padding-left: {{item.position}}; height: 100rpx;">
     <block wx:for="{{item.asssignIds}}" wx:for-item="subItem" wx:for-index="idx">
-    <image 
-      wx:key="id"
-      src="{{item.status === 'locked' ? '/images/work-icon-no.svg' : '/images/work-icon-done.svg'}}"
-      class="item-image-mini" 
-      data-index="{{idx}}"          
-      data-status="{{item.status}}"     
-      data-id="{{item.id}}"     
-      data-extra="{{item.otherData}}"   
-      bindtap="jumpToZuoye" 
-    />
+      <image 
+        style="opacity: {{ (subItem >= 0 && assignments[subItem-1].status === 'locked') ? 0.4 : 1 }};"
+        wx:key="id"
+        src="{{ assignments[subItem-1].status === 'locked' || assignments[subItem-1].status === 'available' ? '/images/work-icon-no.svg' : '/images/work-icon-done.svg'}}"
+        class="item-image-mini" 
+        data-index="{{idx}}"          
+        data-status="{{item.status}}"     
+        data-id="{{item.id}}"     
+        data-extra="{{item.otherData}}"   
+        bindtap="jumpToZuoye" 
+      />
     </block>
 
 <image 
+  style="opacity: {{ (item.status === 'locked') ? 0.2 : 1 }};"
   src="{{item.icon}}" 
   class="item-image" 
   data-id="{{item.id}}"         
