--- a/pages/learning/learning.wxml
+++ b/pages/learning/learning.wxml
@@ -98,10 +98,10 @@
             <button wx:if="{{item.status !== 'locked'}}" class="btn btn-secondary course-btn" >
               {{item.status === 'completed' ? '已完成' : '可学习'}}
             </button>
-            <button wx:if="{{item.status === 'completed'}}" class="btn btn-primary course-btn" bindtap="jumpToZuoye" data-zuoye-id="{{item.id}}">
+            <button wx:if="{{item.status === 'completed'}}" class="btn btn-primary course-btn" bindtap="viewAssignment" data-zuoye-id="{{item.id}}" catchtap="true">
               查看作业
             </button>
-             <button wx:if="{{item.status === 'available'}}" class="btn btn-primary course-btn" bindtap="jumpToZuoye" data-zuoye-id="{{item.id}}">
+             <button wx:if="{{item.status === 'available'}}" class="btn btn-primary course-btn" bindtap="jumpToZuoye" data-zuoye-id="{{item.id}}" catchtap="true">
               开始作业
             </button>
             <button wx:if="{{item.status === 'locked'}}" class="btn btn-disabled course-btn" disabled>
